--- a/production/registration.html
+++ b/production/registration.html
@@ -107,7 +107,37 @@
         </div>
     </section>
 
+    <div class="container mt-5 py-y">
+      <h1 class="text-center py-5">글쓰기</h1>
 
+      <form action="" method="post">
+          <table class="table">
+              <tr>
+                  <td>제목</td>
+                  <td>
+                      <input type="text" name="title" class="form-control" id="title">
+                  </td>
+              </tr>
+              <tr>
+                  <td>작성자</td>
+                  <td>
+                      <input type="text" name="writer" class="form-control" id="writer">
+                  </td>
+              </tr>
+              <tr>
+                  <td>내용</td>
+                  <td>
+                      <textarea name="content" cols="40" rows="2" class="form-control" id="content"></textarea>
+                  </td>
+              </tr>
+          </table>
+          <div class="d-flex justify-content-center">
+              <a href="/production/production.html" class="btn btn-dark rounded-pill px-3">목록</a>
+              <button type="button" class="btn btn-dark rounded-pill px-3" id="btn-create">등록</button>
+          </div>
+      </form>
+
+    </div> 
 
     </main>
 
