--- a/production/registration.html
+++ b/production/registration.html
@@ -107,6 +107,7 @@
         </div>
     </section>
 
+    <section>
     <div class="container mt-5 py-y">
       <h1 class="text-center py-5">글쓰기</h1>
 
@@ -139,6 +140,7 @@
 
     </div> 
 
+    </section>
     </main>
 
     <footer>
