--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
                     <span class="fs-4">Logo</span>
                 </a>
 
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                  <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-                </form>
+                
         
                 <div class="text-end">
-                <a href="#" class="btn btn-outline-light me-2">로그인</a>
-                <a href="#" class="btn btn-secondary me-2">회원가입</a>
+                <a href="/login/login.html" class="btn btn-outline-light me-2">로그인</a>
+                <a href="/login/sign_up.html" class="btn btn-secondary me-2">회원가입</a>
 
                 </div>
 
