--- a/HRM/hrm_AM.html
+++ b/HRM/hrm_AM.html
@@ -31,9 +31,9 @@
 
                        
                 <div class="text-end">
-                <a href="#" class="btn btn-outline-light me-2">로그인</a>
-                <a href="#" class="btn btn-secondary me-2">회원가입</a>
-
+                    <a href="/login/login.html" class="btn btn-outline-light me-2">로그인</a>
+                    <a href="/login/sign_up.html" class="btn btn-secondary me-2">회원가입</a>
+    
                 </div>
 
           </div>
