--- a/production/production.html
+++ b/production/production.html
@@ -29,9 +29,9 @@
                 </a>
 
                 <div class="text-end">
-                <a href="#" class="btn btn-outline-light me-2">로그인</a>
-                <a href="#" class="btn btn-secondary me-2">회원가입</a>
-
+                    <a href="/login/login.html" class="btn btn-outline-light me-2">로그인</a>
+                    <a href="/login/sign_up.html" class="btn btn-secondary me-2">회원가입</a>
+    
                 </div>
 
           </div>
