--- a/production/registration.html
+++ b/production/registration.html
@@ -33,10 +33,10 @@
                 </form>
         
                 <div class="text-end">
-                <a href="#" class="btn btn-outline-light me-2">로그인</a>
-                <a href="#" class="btn btn-secondary me-2">회원가입</a>
-
-                </div>
+                  <a href="/login/login.html" class="btn btn-outline-light me-2">로그인</a>
+                  <a href="/login/sign_up.html" class="btn btn-secondary me-2">회원가입</a>
+  
+                  </div>
 
           </div>
         </div>
