--- a/login/login.html
+++ b/login/login.html
@@ -28,8 +28,6 @@
                     <span class="fs-4">Logo</span>
                 </a>
 
-              
-        
                 <div class="text-end">
                     <a href="/login/login.html" class="btn btn-outline-light me-2">로그인</a>
                     <a href="/login/sign_up.html" class="btn btn-secondary me-2">회원가입</a>
@@ -82,12 +80,17 @@
 
                             <hr class="mt-3">
 
-                            <div class="d-grid gap-3">
+                            <div class="loginbtn">
+                            <a href="/index.html">
                             <button class="btn btn-primary btn-lg btn-block">로그인</button>
+                            </a>
+
+                            <a href="/index.html">
                             <button class="btn btn-success btn-lg btn-block">돌아가기</button>
+                            </a>
                             </div>
 
-                            <hr class="mt-5 mb-3">
+                            <hr class="mt-4 mb-3">
 
                         </div>
                     </div>
