--- a/materials/material_receive/material_receive.html
+++ b/materials/material_receive/material_receive.html
@@ -172,7 +172,7 @@
                     
                 </table>
                 <!-- float:right 적용으로 오른쪽부터 왼족으로 나열됨 -->
-                <a href="#">
+                <a href="/materials/material_receive/receiveinsert.html">
                     <button class="mt_button" type="button">
                     수정하기</button></a>
             </div> 
