--- a/materials/materials_stock/material_stock.html
+++ b/materials/materials_stock/material_stock.html
@@ -185,11 +185,11 @@
             </div> 
             <section class="bt_section">
                 <!-- float:right 적용으로 오른쪽부터 왼족으로 나열됨 -->
-                <a href="#">
+                <a href="/materials/materials_stock/deleveryupdate.html">
                     <button class="mt_button" type="button" >
                     출고등록</button>
                 </a>
-                <a href="#">
+                <a href="/materials/materials_stock/receiveupdate.html">
                     <button class="mt_button" type="button" >
                     입고등록</button>
                 </a>
