--- a/materials/supplycompany/supplycompany.html
+++ b/materials/supplycompany/supplycompany.html
@@ -191,7 +191,7 @@
                 <a href="/materials/supplycompany/supplycompany.html">
                     <button class="mt_button" type="button">삭제</button>
                 </a>
-                <a href="#">
+                <a href="/materials/supplycompany/scupdate.html">
                     <button class="mt_button" type="button">등록</button>
                 </a>
             </div> 
