--- a/materials/material_delivery/material_delivery.html
+++ b/materials/material_delivery/material_delivery.html
@@ -173,7 +173,7 @@
                     
                 </table>
                 <!-- float:right 적용으로 오른쪽부터 왼족으로 나열됨 -->
-                <a href="#">
+                <a href="/materials/material_delivery/deleveryinsert.html">
                     <button class="mt_button" type="button">
                     수정하기</button></a>
             </div> 
