--- a/materials/material_receive/receiveinsert.html
+++ b/materials/material_receive/receiveinsert.html
@@ -87,6 +87,7 @@
                   <button class="btn d-inline-flex align-items-center collapsed border-0" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#ordercustomer-collapse" aria-controls="mng-collapse">
                       <img src="/img/symbol2.webp" alt="" width="20" height="20">ㅤ판매 및 고객관리</button>
                   <ul class="list-unstyled ps-3 collapse" id="ordercustomer-collapse">
+                    <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#">고객관리</a></li>
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#typography">주문관리</a></li>
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#images">불량품관리</a></li>
                   </ul>
@@ -157,7 +158,7 @@
 
                             <div class="text-end">
                                 <a href="/materials/material_receive/material_receive.html">
-                                    <button class="btn btn-lg btn-primary" type="submit">등록하기</button>
+                                    <button class="btn btn-lg btn-primary" type="submit">수정하기</button>
                                 </a>
                                 <a href="/materials/material_receive/material_receive.html" class="btn btn-lg btn-primary">돌아가기</a>
                             </div>
