--- a/production/registration.html
+++ b/production/registration.html
@@ -160,10 +160,13 @@
 
 
                             <div class="text-end">
-                                <a href="/production/production.html">
-                                    <button class="btn btn-lg btn-primary" type="submit">등록하기</button>
-                                </a>
-                                <a href="/production/production.html" class="btn btn-lg btn-primary">돌아가기</a>
+                              <a href="/production/production.html"
+                               class="btn btn-lg btn-primary">등록하기
+                              </a>
+                              <a href="/production/production.html"
+                               class="btn btn-lg btn-primary">돌아가기
+                              </a>
+                              
                             </div>
                             
                         </div>
