--- a/production/registration.html
+++ b/production/registration.html
@@ -51,14 +51,14 @@
             <ul class="nav nav-pills flex-column mb-auto">
               <li class="my-2">
                   <button class="btn d-inline-flex align-items-center collapsed border-0" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#contents-collapse" aria-controls="contents-collapse">
-                      <img src="/img/symbol2.webp" alt="" width="20" height="20">ㅤ공지사항</button>
+                      <!-- <img src="/img/symbol2.webp" alt="" width="20" height="20"> -->ㅤ공지사항</button>
                   <ul class="list-unstyled ps-3 collapse" id="contents-collapse">
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#typography">공지게시판</a></li>
                   </ul>
                 </li>
               <li class="my-2">
                   <button class="btn d-inline-flex align-items-center collapsed border-0" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#forms-collapse" aria-controls="forms-collapse">
-                      <img src="/img/symbol2.webp" alt="" width="20" height="20">ㅤ인사관리</button>
+                      <!-- <img src="/img/symbol2.webp" alt="" width="20" height="20"> -->ㅤ인사관리</button>
                   <ul class="list-unstyled ps-3 collapse" id="forms-collapse">
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/HRM/hrm_main.html">인사정보조회</a></li>
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/HRM/hrm_AM.html">근태관리</a></li>
@@ -67,7 +67,7 @@
                 </li>
               <li class="my-2">
                   <button class="btn d-inline-flex align-items-center collapsed border-0" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#components-collapse" aria-controls="components-collapse">
-                      <img src="/img/symbol2.webp" alt="" width="20" height="20">ㅤ자재관리</button>
+                      <!-- <img src="/img/symbol2.webp" alt="" width="20" height="20"> -->ㅤ자재관리</button>
                   <ul class="list-unstyled ps-3 collapse" id="components-collapse">
                       <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/materials/materials_stock/material_stock.html">자재재고관리</a></li>
                       <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/materials/materials_stock/material_stock.html">입고자재관리</a></li>
@@ -77,7 +77,7 @@
                 </li>
                 <li class="my-2">
                   <button class="btn d-inline-flex align-items-center collapsed border-0" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#mng-collapse" aria-controls="mng-collapse">
-                      <img src="/img/symbol2.webp" alt="" width="20" height="20">ㅤ생산관리</button>
+                      <!-- <img src="/img/symbol2.webp" alt="" width="20" height="20"> -->ㅤ생산관리</button>
                   <ul class="list-unstyled ps-3 collapse" id="mng-collapse">
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/production/production.html">생산상품조회</a></li>
                     <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#images">불량품관리</a></li>
@@ -85,10 +85,11 @@
                 </li>
                 <li class="my-2">
                   <button class="btn d-inline-flex align-items-center collapsed border-0" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#ordercustomer-collapse" aria-controls="mng-collapse">
-                      <img src="/img/symbol2.webp" alt="" width="20" height="20">ㅤ판매 및 고객관리</button>
+                      <!-- <img src="/img/symbol2.webp" alt="" width="20" height="20"> -->ㅤ판매 및 고객관리</button>
                   <ul class="list-unstyled ps-3 collapse" id="ordercustomer-collapse">
-                    <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#typography">주문관리</a></li>
-                    <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#images">불량품관리</a></li>
+                    <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/customer/customer.html">고객관리</a></li>
+                      <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="/OM/om_main.html">주문관리</a></li>
+                      <li><a class="d-inline-flex align-items-center rounded text-decoration-none" href="#images">불량품관리</a></li>
                   </ul>
                 </li>
           </ul>
